[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fastapi-headless-wamp"
dynamic = ["version"]
description = "Bidirectional WAMP RPC and PubSub for FastAPI without a separate router"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Konstantin Burkalev" },
]
keywords = ["fastapi", "wamp", "websocket", "rpc", "pubsub"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.100.0",
    "starlette>=0.27.0",
]

[project.optional-dependencies]
cbor = ["cbor2>=5.6"]
msgpack = ["msgpack>=1.0"]

[project.urls]
Homepage = "https://github.com/KSDaemon/fastapi-headless-wamp"
Repository = "https://github.com/KSDaemon/fastapi-headless-wamp"

[dependency-groups]
dev = [
    "cbor2>=5.6",
    "httpx>=0.27",
    "msgpack>=1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.5",
    "ruff>=0.15.6",
    "uvicorn>=0.30",
    "websockets>=12.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.hatch.build.hooks.vcs]
version-file = "src/fastapi_headless_wamp/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_headless_wamp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
show_missing = true
